--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -55,4 +55,8 @@
 
 @media (min-width: 769px) and (max-width: 1250px) {}
 
-@media (min-width: 320px) and (max-width: 768px) {}
+@media (min-width: 320px) and (max-width: 768px) {
+    .home-container {
+        background-size: 250% 100vh;
+    }
+}
