--- a/src/GlobalStyles1.scss
+++ b/src/GlobalStyles1.scss
@@ -115,9 +115,7 @@
     }
 
     .main-section-header-title {
-        font-size: 50px;
-        bottom: 594px;
-        left: 83px;
+        display: none;
     }
 
     .flavors-content-container,
