--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -87,5 +87,9 @@
         flex-direction: column;
         padding-bottom: 10px;
     }
+
+    .nav-btns {
+        margin: 10px !important;
+    }
 }
 
