layout complete for website opening

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,5 +16,4 @@
 
 @media (min-width: 769px) and (max-width: 1250px) {}
 
-@media (min-width: 320px) and (max-width: 768px) {
-}
+@media (min-width: 320px) and (max-width: 768px) {}
