--- a/src/GlobalStyles1.scss
+++ b/src/GlobalStyles1.scss
@@ -54,7 +54,7 @@
     flex-wrap: wrap;
     width: 100%;
     flex-direction: column;
-    font-size: 12px;
+    font-size: 18px;
     font-family: 'Poiret One', cursive;
     font-weight: 900;
     max-height: 570px;
@@ -97,24 +97,43 @@
 }
 
 // Tablets
-@media (min-width: 769px) and (max-width: 1250px) {}
-
-/* Mobile Devices */
-@media (min-width: 320px) and (max-width: 768px) {
+@media (min-width: 481px) and (max-width: 1200px)  {
     .main-section-container {
-        flex-direction: column;
+        flex-direction: column !important;
     }
 
     .display-img {
-        height: 240px !important;
+        height: 340px !important;
     }
 
     .description-container {
-        font-size: 10px;
-        max-height: 520px;
+        font-size: 15px !important;
+        max-height: 520px !important;
     }
 
     .main-section-header-title {
-        display: none;
+        font-size: 100px !important;
+        bottom: 811px !important;
+        margin-left: 40px !important;
+    }
+}
+
+/* Mobile Devices */
+@media (min-width: 320px) and (max-width: 480px) {
+    .main-section-container {
+        flex-direction: column !important;
+    }
+
+    .display-img {
+        height: 180px !important;
+    }
+
+    .description-container {
+        font-size: 10px !important;
+        max-height: 520px !important;
+    }
+
+    .main-section-header-title {
+        display: none !important;
     }
 }
