--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -53,14 +53,22 @@
 }
 
     // tablets
-    @media (min-width: 769px) and (max-width: 1250px) {}
-
-    @media (min-width: 320px) and (max-width: 768px) {
+    @media (min-width: 481px) and (max-width: 1200px) {
         .footer {
             font-size: 10px !important;
         }
 
         .footer-container {
-            font-size: 12px;
+            font-size: 12px !important;
+        }
+    }
+
+    @media (min-width: 320px) and (max-width: 480px) {
+        .footer {
+            font-size: 10px !important;
+        }
+
+        .footer-container {
+            font-size: 12px !important;
         }
     }
