--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    background-color: var(--secondary-bg-color);
+    background-color: var(--bg-color);
     width: 100%;
     height: 100%;
 }
