--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -6,6 +6,7 @@
     border-top: 1px solid black;
     font-family: 'Poiret One', cursive;
     font-weight: 900;
+    background-color: var(--footer-color);
 
     .location-container {
         border-bottom: 1px solid gray;
