--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -3,7 +3,7 @@
     flex: 1;
     justify-content: space-evenly;
     align-items: center;
-    background-color: var(--bg-color);
+    background-color: var(--footer-color);
     font-family: 'Poiret One', cursive;
     z-index: 2000;
     position: -webkit-sticky;
