--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -1,15 +1,21 @@
 .home-container {
     display: flex;
-    background: white url(../../assets/img/cakes/main-cake.jpg) no-repeat center;
-    background-size: 100% 100vh;
-    width: 100%;
+    width: 50%;
     height: 100vh;
     overflow: hidden;
     align-items: center;
     justify-content: center;
 
-    .home-title-container {
-        
+    .img-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .main-cake {
+            display: flex;
+            width: 100%;
+            border: 50px inset black;
+        }
     }
 
     .btn-wrapper {
@@ -46,12 +52,14 @@
 
 @media (min-width: 481px) and (max-width: 1200px) {
     .home-container {
-        background-size: 220% 100vh !important;
+        height: 90vh;
+        width: 100%;
     }
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
     .home-container {
-        background-size: 350% 100vh !important;
+        height: 90vh;
+        width: 100%;
     }
 }
